--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Restaurantly Bootstrap Template - Index</title>
+  <title>YORIJORI</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -62,12 +62,12 @@
 
       <!--<h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="./assets/img/logo.png"  width="60px" height="60px"></a></h1>-->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid" width="60px" height="60px">YORIJORI</a>
+      <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo_1.png" alt="" class="img-fluid" width="60px" height="60px">YORIJORI</a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="./inner-page.html">About</a></li>
           <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
           <li><a class="nav-link scrollto" href="#specials">Specials</a></li>
           <li><a class="nav-link scrollto" href="#events">Events</a></li>
