--- a/logo_3.html
+++ b/logo_3.html
@@ -63,19 +63,10 @@
       <!--<h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="./assets/img/logo.png"  width="60px" height="60px"></a></h1>-->
       <!-- Uncomment below if you prefer to use an image logo -->
 
-      <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid" width="60px" height="60px">YORIJORI</a>
+      <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo_3.png" alt="" class="img-fluid" width="60px" height="60px">YORIJORI</a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <!--
-            <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-            <li><a class="nav-link scrollto" href="./logo_1.html">About</a></li>
-            <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
-            <li><a class="nav-link scrollto" href="#specials">Specials</a></li>
-            <li><a class="nav-link scrollto" href="#events">Events</a></li>
-            <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>
-            <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
-          -->
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="./logo_1.html">로고_1</a></li>
           <li><a class="nav-link scrollto" href="./logo_2.html">로고_2</a></li>
