--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <li><a class="nav-link scrollto" href="./logo_1.html">로고_1</a></li>
           <li><a class="nav-link scrollto" href="./logo_2.html">로고_2</a></li>
           <li><a class="nav-link scrollto" href="./logo_3.html">로고_3</a></li>
-          <li><a class="nav-link scrollto" href="#events">Events</a></li>
+          <li><a class="nav-link scrollto" href="./logo_4.html">로고_4</a></li>
           <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
